--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Transitive by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Transitive by TEMPLATED</title>
+		<title>Johns Hopkins AKPsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">ALPHA KAPPA PSI <span>at JOHNS HOPKINS UNIVERSITY</span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
@@ -23,6 +19,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
+					<li><a href="rush.html">Rush</a></li>
 					<li><a href="generic.html">Generic</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
@@ -34,31 +31,35 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
-			<section id="banner" data-video="images/banner">
+			<section id="banner" data-video="images/baltimore">
 				<div class="inner">
-					<h1>Transitive</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
-					<a href="#one" class="button special scrolly">Get Started</a>
+					<h1>Alpha Kappa Psi</h1>
+					<h2><font color="ffffff">Rho Psi Chapter</font></h2>
+					<p>Alpha Kappa Psi is recognized as the premier developer of principled business leaders.</p>
+					<a href="#aboutus" class="button front scrolly">About Us</a>
 				</div>
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2">
+			<section id="aboutus" class="wrapper style2">
 				<div class="inner">
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/" alt="" />
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<h2>Lorem ipsum dolor</h2>
-									<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+									<h2>Johns Hopkins University's Premier Co-Ed Business Fraternity</h2>
+									<!-- <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p> -->
 								</header>
 								<hr />
-								<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-								<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
+								<h3>A Message from our President</h3>
+								<p><span class="image left"><img src="images/SarahCondon.jpg" alt="" /></span>Welcome to the Rho Psi chapter of Alpha Kappa Psi at Johns Hopkins University. Since 2001, our chapter has worked to develop principled business leaders. We are the business powerhouse of Johns Hopkins University. We work to bring together JHU’s highest achieving, business-minded students to foster a community of growth and success.</p>
+								<p>Our brotherhood is comprised of members from 20 different majors, from countries around the world, and from diverse backgrounds. Rho Psi brothers span the Hopkins community as leaders of several other student organizations, young entrepreneurs, achievers in academia, varsity collegiate athletes, and young professionals in the business world.</p>
+								<p>Alpha Kappa Psi is the oldest and largest professional business fraternity with more than 160,000 initiated members world-wide at 265 active chapters. Recognized as the premier developer of principled business leaders, AKPsi prides itself on sending driven and inspiring members into the professional sphere. Our chapter’s own alumni now currently work at companies such as JPMoragn, Bain & Co., Bridgewater Associates, McKinsey & Co., Pandora, Deloitte, Facebook, Accenture, and Goldman Sachs. Some have also gone on to become finalists at TechCrunch Disrupt, the world’s premier start up competition, while others have founded their own non-profit organizations.</p>
+								<p>We love to see our chapter grow and to add new members though recruitment. If you have any questions about Alpha Kappa Psi, do not hesitate to email our Executive Board at akpsijhu@gmail.com or check our Facebook Page ‘Alpha Kappa Psi - Johns Hopkins University.</p>
+								<p> - Sarah Condon ’20 - President of Alpha Kappa Psi, Rho Psi Chapter</p>
 							</div>
 						</div>
 					</div>
@@ -71,38 +72,63 @@
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>Tempus Feugiat</h3>
+								<h3>President</h3><br/>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu</p>
-							<ul class="actions">
+							<span class="image officer"><img src="images/SarahCondon.jpg" alt="President: Sarah Condon" /></span>
+							<p>Sarah Condon</p>
+							<!-- <ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div>
 							<header>
-								<h3>Aliquam Nulla</h3>
+								<h3>VP Programming</h3><br/>
 							</header>
-							<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed </p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
+							<span class="image officer"><img src="images/BryanKi.jpg" alt="VP Programming: Bryan Ki" /></span>
+							<p>Bryan Ki</p>
 						</div>
 						<div>
 							<header>
-								<h3>Sed Magna</h3>
+								<h3>VP Administration</h3><br/>
 							</header>
-							<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
+							<span class="image officer"><img src="images/BismaKhan.jpg" alt="VP Admin: Bisma Khan" /></span>
+							<p>Bisma Khan</p>
+						</div>
+						<div>
+							<header>
+								<h3>VP Communications</h3><br/>
+							</header>
+							<span class="image officer"><img src="images/TheoLee.jpg" alt="VP Comm: Theo Lee" /></span>
+							<p>Theodore Lee</p>
+						</div>
+						<div>
+							<header>
+								<h3>VP Finance</h3><br/>
+							</header>
+							<span class="image officer"><img src="images/DaltonChu.jpg" alt="VP Finance: Dalton Chu" /></span>
+							<p>Dalton Chu</p>
+						</div>
+						<div>
+							<header>
+								<h3>VP Professional Development</h3>
+							</header>
+							<span class="image officer"><img src="images/SonakKolar.jpg" alt="VP Prof Dev: Sonak Kolar" /></span>
+							<p>Sonak Kolar</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Three -->
+			<!-- Three -->
 			<section id="three" class="wrapper style2">
 				<div class="inner">
+					<header class="align-center">
+						<h2>Join Us for Spring Rush 2018</h2>
+						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+						<ul class="actions">
+							<li><a href="rush.html" class="button alt">Spring Rush 2018</a></li>
+						</ul>
+					</header>
 					<div class="grid-style">
 
 						<div>
@@ -141,17 +167,21 @@
 				</div>
 			</section>
 
+
 		<!-- Four -->
-			<section id="four" class="wrapper style3">
+			<!-- <section id="four" class="wrapper style3">
 				<div class="inner">
 
 					<header class="align-center">
-						<h2>Morbi interdum mollis sapien</h2>
+						<h2>Join Us for Spring Rush 2018</h2>
 						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+						<ul class="actions">
+							<li><a href="rush.html" class="button alt">Spring Rush 2018</a></li>
+						</ul>
 					</header>
 
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper">
