added more text

--- a/rush.html
+++ b/rush.html
@@ -34,7 +34,7 @@
 				<div class="inner">
 					<div class="box">
 						<div class="image fit">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
@@ -57,7 +57,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic02.jpg" alt="" />
+  									<img src="images/resumeWorkshop.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -73,7 +73,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic02.jpg" alt="" />
+  									<img src="images/S18light.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -89,7 +89,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic02.jpg" alt="" />
+  									<img src="images/S18light.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -105,7 +105,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic03.jpg" alt="" />
+  									<img src="images/S18light.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -121,7 +121,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic03.jpg" alt="" />
+  									<img src="images/S18light.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -137,7 +137,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/pic03.jpg" alt="" />
+  									<img src="images/S18light  .jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
