finalizing rough website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Johns Hopkins AKPsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="images/mainIcon.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
@@ -20,8 +21,9 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="rush.html">Rush</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="/rush.html#faq">FAQ</a></li>
+					<!-- <li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li> -->
 				</ul>
 			</nav>
 
@@ -31,16 +33,19 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
-			<section id="banner" data-video="images/baltimore">
+			<section id="banner" data-video="images/baltimore2">
 				<div class="inner">
 					<h1>Alpha Kappa Psi</h1>
 					<h2><font color="ffffff">Rho Psi Chapter</font></h2>
 					<p>Alpha Kappa Psi is recognized as the premier developer of principled business leaders.</p>
+					<!-- TODO look into navy color button -->
 					<a href="#aboutus" class="button front scrolly">About Us</a>
+					<br><br><a href="rush.html" class="button front scrolly">Rush Spring 2018</a>
+					<!-- <a href="#execboard" class="button front scrolly">Executive Board</a> -->
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- About Us -->
 			<section id="aboutus" class="wrapper style2">
 				<div class="inner">
 					<div>
@@ -50,31 +55,33 @@
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<h2>Johns Hopkins University's Premier Co-Ed Business Fraternity</h2>
+									<h2>Johns Hopkins University's Professional Co-Ed Business Fraternity</h2>
 									<!-- <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p> -->
 								</header>
 								<hr />
 								<h3>A Message from our President</h3>
-								<p><span class="image left"><img src="images/SarahCondon.jpg" alt="" /></span>Welcome to the Rho Psi chapter of Alpha Kappa Psi at Johns Hopkins University. Since 2001, our chapter has worked to develop principled business leaders. We are the business powerhouse of Johns Hopkins University. We work to bring together JHU’s highest achieving, business-minded students to foster a community of growth and success.</p>
-								<p>Our brotherhood is comprised of members from 20 different majors, from countries around the world, and from diverse backgrounds. Rho Psi brothers span the Hopkins community as leaders of several other student organizations, young entrepreneurs, achievers in academia, varsity collegiate athletes, and young professionals in the business world.</p>
-								<p>Alpha Kappa Psi is the oldest and largest professional business fraternity with more than 160,000 initiated members world-wide at 265 active chapters. Recognized as the premier developer of principled business leaders, AKPsi prides itself on sending driven and inspiring members into the professional sphere. Our chapter’s own alumni now currently work at companies such as JPMoragn, Bain & Co., Bridgewater Associates, McKinsey & Co., Pandora, Deloitte, Facebook, Accenture, and Goldman Sachs. Some have also gone on to become finalists at TechCrunch Disrupt, the world’s premier start up competition, while others have founded their own non-profit organizations.</p>
-								<p>We love to see our chapter grow and to add new members though recruitment. If you have any questions about Alpha Kappa Psi, do not hesitate to email our Executive Board at akpsijhu@gmail.com or check our Facebook Page ‘Alpha Kappa Psi - Johns Hopkins University.</p>
-								<p> - Sarah Condon ’20 - President of Alpha Kappa Psi, Rho Psi Chapter</p>
+								<p><span class="image left"><img src="images/sarahCondonLetter.jpg" alt="" /></span><strong>Welcome to the Rho Psi chapter of Alpha Kappa Psi at Johns Hopkins University. Since 2001, our chapter has worked to develop principled business leaders. We are the business powerhouse of Johns Hopkins University. We work to bring together JHU’s highest achieving, business-minded students to foster a community of growth and success.</strong></p>
+								<p><strong>Our brotherhood is comprised of members from 20 different majors, from countries around the world, and from diverse backgrounds. Rho Psi brothers span the Hopkins community as leaders of several other student organizations, young entrepreneurs, achievers in academia, varsity collegiate athletes, and young professionals in the business world.</strong></p>
+								<p><strong>Alpha Kappa Psi is the oldest and largest professional business fraternity with more than 160,000 initiated members world-wide at 265 active chapters. Recognized as the premier developer of principled business leaders, AKPsi prides itself on sending driven and inspiring members into the professional sphere. Our chapter’s own alumni now currently work at companies such as JPMoragn, Bain & Co., Bridgewater Associates, McKinsey & Co., Pandora, Deloitte, Facebook, Accenture, and Goldman Sachs. Some have also gone on to become finalists at TechCrunch Disrupt, the world’s premier start up competition, while others have founded their own non-profit organizations.</strong></p>
+								<p><strong>We love to see our chapter grow and to add new members though recruitment. If you have any questions about Alpha Kappa Psi, do not hesitate to email our Executive Board at akpsijhu@gmail.com or check our Facebook Page ‘Alpha Kappa Psi - Johns Hopkins University.</strong></p>
+								<!-- TODO Put signature on right side of the page-->
+								<p><strong> Sarah Condon ’20 - President of Alpha Kappa Psi, Rho Psi Chapter</strong></p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Two -->
-			<section id="two" class="wrapper style3">
+		<!-- Exec Board -->
+			<section id="execboard" class="wrapper style3">
 				<div class="inner">
+					<h2><center>Executive Board</center><br><br></h2>
 					<div id="flexgrid">
 						<div>
 							<header>
 								<h3>President</h3><br/>
 							</header>
-							<span class="image officer"><img src="images/SarahCondon.jpg" alt="President: Sarah Condon" /></span>
+							<span class="image officer"><img src="images/sarahCondon.jpg" alt="President: Sarah Condon" /></span>
 							<p>Sarah Condon</p>
 							<!-- <ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
@@ -84,28 +91,28 @@
 							<header>
 								<h3>VP Programming</h3><br/>
 							</header>
-							<span class="image officer"><img src="images/BryanKi.jpg" alt="VP Programming: Bryan Ki" /></span>
+							<span class="image officer"><img src="images/bryanKi.jpg" alt="VP Programming: Bryan Ki" /></span>
 							<p>Bryan Ki</p>
 						</div>
 						<div>
 							<header>
 								<h3>VP Administration</h3><br/>
 							</header>
-							<span class="image officer"><img src="images/BismaKhan.jpg" alt="VP Admin: Bisma Khan" /></span>
+							<span class="image officer"><img src="images/bismaKhan.jpg" alt="VP Admin: Bisma Khan" /></span>
 							<p>Bisma Khan</p>
 						</div>
 						<div>
 							<header>
 								<h3>VP Communications</h3><br/>
 							</header>
-							<span class="image officer"><img src="images/TheoLee.jpg" alt="VP Comm: Theo Lee" /></span>
+							<span class="image officer"><img src="images/theoLee.jpg" alt="VP Comm: Theo Lee" /></span>
 							<p>Theodore Lee</p>
 						</div>
 						<div>
 							<header>
 								<h3>VP Finance</h3><br/>
 							</header>
-							<span class="image officer"><img src="images/DaltonChu.jpg" alt="VP Finance: Dalton Chu" /></span>
+							<span class="image officer"><img src="images/daltonChu.jpg" alt="VP Finance: Dalton Chu" /></span>
 							<p>Dalton Chu</p>
 						</div>
 						<div>
@@ -119,30 +126,33 @@
 				</div>
 			</section>
 
-			<!-- Three -->
-			<section id="three" class="wrapper style2">
+
+			<!-- Join Us -->
+			<section id="joinus" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
 						<h2>Join Us for Spring Rush 2018</h2>
-						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+						<p>Our recruitment process is beginning this Thursday, February 15th. Come to our events to find out more about the brotherhood and professional opportunities that Alpha Kappa Psi has to offer! We'll see you there!</p>
 						<ul class="actions">
 							<li><a href="rush.html" class="button alt">Spring Rush 2018</a></li>
 						</ul>
 					</header>
+					<br><br>
 					<div class="grid-style">
 
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/mominMohis.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<h2>Lorem ipsum dolor</h2>
-										<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+										<h2>Momin Mohis</h2>
+										<p></p>
+										<p>Biomedical Engineering and Economics&nbsp'19<br>Entrepreneur & A-Level Capital Associate </p>
 									</header>
-									<hr />
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+
+									<p><blockquote>Alpha Kappa Psi has played an instrumental role in shaping my world view, pushing me to aim higher and be more confident.</blockquote></p>
 								</div>
 							</div>
 						</div>
@@ -150,15 +160,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/sarahLeeChoi.png" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<h2>Vestibulum sit amet</h2>
-										<p>mattis sapien pretium tellus venenatis</p>
+										<h2>Sarah Lee Choi</h2>
+										<p></p>
+										<p>Cognitive Science&nbsp'19<br>Google Marketing Intern & JHMI Neurology Department Researcher</p>
 									</header>
 									<hr />
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+									<p><blockquote>What makes AKPsi so special is the sheer diversity of people you get to meet – they are some of the most ambitious, bright, and caring people that I’ve met during my three years here. Couldn’t be more thankful to have a community that you turn to and give back to!</blockquote></p>
 								</div>
 							</div>
 						</div>
@@ -184,7 +195,7 @@
 			</section> -->
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper">
+			<!--<footer id="footer" class="wrapper">
 				<div class="inner">
 					<section>
 						<div class="box">
@@ -227,7 +238,7 @@
 						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>. Video <a href="http://coverr.co/">Coverr</a>.
 					</div>
 				</div>
-			</footer>
+			</footer>-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
