--- a/rush.html
+++ b/rush.html
@@ -9,6 +9,7 @@
 		<title>RUSH - JHU AKPsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="images/mainIcon.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="subpage">
@@ -24,8 +25,9 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
           <li><a href="index.html">Rush</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="#faq">FAQ</a></li>
+					<!-- <li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li> -->
 				</ul>
 			</nav>
 
@@ -34,16 +36,24 @@
 				<div class="inner">
 					<div class="box">
 						<div class="image fit">
-							<img src="images/pic02.jpg" alt="" />
+							<img src="images/rushbanner.jpg" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Rush Spring 2018</h2>
-								<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+								<h2>Spring Rush 2018</h2>
+								<!-- <p>Look below to find out more about our events!</p> -->
+                <div class="image left rush">
+                  <img src="images/jaydenLiu.jpg" alt="" />
+                </div>
+                <div class="image right rush">
+                  <img src="images/hunterHopkins.jpg" alt="" />
+                </div>
+                <p>As underclassmen, it wasn’t that long ago that we were rushing AKPsi. We remember wondering if our attire was professional enough, if we were too enthusiastic or not enthusiastic enough, and the hundred other things that run through your mind. Trust us when we say we know it can be daunting rushing a business fraternity, which is why we are here to help answer all your questions. We are incredibly excited to share our experiences with you and see what new perspectives and personalities you may bring to this amazing brotherhood! Feel free to reach out to us at any point at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>.</p>
+                <p>-Jayden Liu & Hunter Hopkins, Spring ‘18 Rush Chairs
 							</header>
 							<hr />
-							<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-							<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
+							<!-- <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+							<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p> -->
 						</div>
 					</div>
 				</div>
@@ -54,6 +64,22 @@
   				<div class="inner">
   					<div class="grid-style">
 
+              <div>
+  							<div class="box">
+  								<div class="image fit">
+  									<img src="images/SuitUp.jpg" alt="" />
+  								</div>
+  								<div class="content">
+  									<header class="align-center">
+  										<h2>Job & Internship Search Foundational Lab</h2>
+                      <p>February 7th 5:00PM - 6:00PM @ BLC 4040 <br>Dress Code: Casual</p>
+  									</header>
+  									<hr />
+  									<p>Join Alpha Kappa Psi & the Career Center for a Job/Internship workshop! Learn from brothers who have experience in applying and landing internships and jobs in various fields. This is also a great opportunity to meet the the brothers ahead of Spring Rush!</p>
+  								</div>
+  							</div>
+  						</div>
+
   						<div>
   							<div class="box">
   								<div class="image fit">
@@ -62,10 +88,10 @@
   								<div class="content">
   									<header class="align-center">
   										<h2>Resume Workshop</h2>
-  										<p>4:00PM - 5:00PM @ Office of Multicultural Affairs</p>
+                      <p>4:00PM - 5:00PM @ OMA <br>Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+  									<p>Drop by the Office of Multicultural Affairs (OMA) on Valentine's Day to have your resume polished by the brothers of AKPsi, so you're ready to impress employers this spring!</p>
   								</div>
   							</div>
   						</div>
@@ -73,15 +99,15 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/S18light.jpg" alt="" />
+  									<img src="images/meetTheBrothers.png" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
   										<h2>Meet the Brothers</h2>
-  										<p>6:30PM - 9:30PM @ Mudd Atrium</p>
+                      <p>7pm - 10pm @ Mudd Atrium</br>Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+  									<p>Get a chance to meet all the amazing brothers of Alpha Kappa Psi! We will be providing pizza and refreshments and would love to get a chance to find out more about you! </p>
   								</div>
   							</div>
   						</div>
@@ -89,15 +115,15 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/S18light.jpg" alt="" />
+  									<img src="images/infoSessionI.png" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
   										<h2>Information Session I</h2>
-  										<p>6:30PM - 9:30PM @ Charles Commons Salon B</p>
+                      <p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
   									</header>
   									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+  									<p>What is Rush? What are the pledge projects? Do I have to be a certain major to rush? Our information session will give you a chance to ask all the questions you have about the fraternity. You will have time to talk to our project chairs and make meaningful connections!</p>
   								</div>
   							</div>
   						</div>
@@ -105,15 +131,15 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/S18light.jpg" alt="" />
+  									<img src="images/infoSessionII.png" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
   										<h2>Information Session II</h2>
-  										<p>6:30PM - 9:30PM @ Charles Commons Salon B</p>
+  										<p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
   									</header>
   									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+                    <p>You only need to attend one Information Session! Look at Information Session I for more details.</p>
   								</div>
   							</div>
   						</div>
@@ -121,15 +147,15 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/S18light.jpg" alt="" />
+  									<img src="images/socialNight.png" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
   										<h2>Social Night</h2>
-  										<p>6:30PM - 9:30PM @ Charles Commons Kitchen</p>
+                      <p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+  									<p>Wear comfortable clothes and tennis shoes! Get ready to have some fun playing team building games with our brothers! </p>
   								</div>
   							</div>
   						</div>
@@ -137,15 +163,13 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/S18light  .jpg" alt="" />
+  									<img src="images/rushbanner.jpg" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
   										<h2>Professional Night</h2>
-  										<p>Invite Only</p>
+  										<p>Invite Only<br> Dress Code: Business Professional</p>
   									</header>
-  									<hr />
-  									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
   								</div>
   							</div>
   						</div>
@@ -154,20 +178,61 @@
   				</div>
   			</section>
 
-		<!-- Four -->
-			<section id="four" class="wrapper style3">
+		<!-- FAQ -->
+			<section id="faq" class="wrapper style3">
 				<div class="inner">
-
 					<header class="align-center">
-						<h2>Morbi interdum mollis sapien</h2>
-						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-					</header>
+						<h2>Frequently Asked Questions</h2><br>
+          </header>
+          <div id="flexgrid">
+            <div>
+              <header>
+                <h3>What is AKPsi? Why should I join?</h3>
+              </header>
+              <p>Founded in 1904 at NYU, Alpha Kappa Psi is the largest and oldest professional co-ed business fraternity. We have an extensive network of alumni, and members are able to land opportunities at some of the most profitable companies in the world. We prepare our brothers for a life of success.</p>
+          </div>
+
+          <div>
+            <header>
+              <h3>Do I have to be an Economics or business related major?</h3>
+            </header>
+            <p>No. It is necessary to know how to interview well and behave with professionalism in the workplace no matter what industry enter. During your pledge process in AKPsi, you will learn skills such as crafting your own resume, presenting yourself in networking settings, preparing for interviews, organization skills, and public speaking.</p>
+        </div>
+
+        <div>
+          <header>
+            <h3>What is the pledge process?</h3>
+          </header>
+          <p>The pledging process is an 8 week time-period to develop brotherhood through relationships with your pledge class and brothers in the fraternity. During this time you also complete a project in Finance, Consulting, Entrepreneurship, or Marketing.</p>
+      </div>
+
+      <div>
+        <header>
+          <h3>Who do I contact if I cannot make a rush event? If I miss an event will I be cut?</h3>
+        </header>
+        <p>If you cannot make one of the events, please let one of the rush chairs know ahead of time in person and by email at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>. We only have a week to meet all of you, so try your best to attend all events!</p>
+      </div>
+
+      <div>
+        <header>
+          <h3>What are the Pledge Projects?</h3>
+        </header>
+        <p>The Pledge Projects give our new members a unique opporutnity to gain valuable insight into one of the four areas of business: finance, consulting, entrepreneurship, and marketing. The project will teach you necessary professional skills such as time management, public speaking, organizational skills, and communication. </p>
+			</div>
+
+      <div>
+        <header>
+          <h3>Where are some of our alumni?</h3>
+        </header>
+        <p>Our alumni network at Hopkins is diverse in both location and field. Our brothers have gone to start their own health care companies, enrolled in schools such as Harvard Medical School, Stanford Medicine, Wharton, Harvard Business School, and others have gone to work at places such as Bain & Co, McKinsey & Co, Bridgewater Associates, JP Morgan, Morgan Stanley, Pandora, and Facebook. The list goes on and on!</p>
+      </div>
+
 
 				</div>
 			</section>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper">
+			<!-- <footer id="footer" class="wrapper">
 				<div class="inner">
 					<section>
 						<div class="box">
@@ -210,7 +275,7 @@
 						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a> Video <a href="http://coverr.co/">Coverr</a>.
 					</div>
 				</div>
-			</footer>
+			</footer> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
