--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<header>
 								<h3>VP Professional Development</h3>
 							</header>
-							<span class="image officer"><img src="images/SonakKolar.jpg" alt="VP Prof Dev: Sonak Kolar" /></span>
+							<span class="image officer"><img src="images/sonakKolar.jpg" alt="VP Prof Dev: Sonak Kolar" /></span>
 							<p>Sonak Kolar</p>
 						</div>
 					</div>
