--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 				<div class="inner">
 					<div>
 						<div class="box">
-							<div class="image fit">
+							<!-- <div class="image fit">
 								<img src="images/" alt="" />
-							</div>
+							</div> -->
 							<div class="content">
 								<header class="align-center">
 									<h2>Johns Hopkins University's Professional Co-Ed Business Fraternity</h2>
