--- a/rush.html
+++ b/rush.html
@@ -31,6 +31,14 @@
 				</ul>
 			</nav>
 
+			<section id="rushvid">
+				<div class="video-background">
+		    <div class="video-foreground">
+		      <iframe src="https://www.youtube.com/embed/DO0YEyPwzuw?&autoplay=1&controls=1" frameborder="1" allowfullscreen></iframe>
+		    </div>
+		  </div>
+			</section>
+
 		<!-- One -->
 			<section id="one" class="wrapper style2">
 				<div class="inner">
@@ -52,6 +60,7 @@
                 <p>-Jayden Liu & Hunter Hopkins, Spring ‘18 Rush Chairs
 							</header>
 							<hr />
+							<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DO0YEyPwzuw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 							<!-- <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
 							<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p> -->
 						</div>
