rush video with controls

--- a/rush.html
+++ b/rush.html
@@ -32,11 +32,10 @@
 			</nav>
 
 			<section id="rushvid">
-				<div class="video-background">
-		    <div class="video-foreground">
-		      <iframe src="https://www.youtube.com/embed/DO0YEyPwzuw?&autoplay=1&controls=1" frameborder="1" allowfullscreen></iframe>
-		    </div>
-		  </div>
+					<div class="video-rush">
+						<iframe src="https://www.youtube.com/embed/DO0YEyPwzuw?rel=0&amp;controls=0&autoplay=1&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		      <!--<iframe src="https://www.youtube.com/embed/DO0YEyPwzuw?&autoplay=1&controls=1" frameborder="1" allowfullscreen></iframe> -->
+					</div>
 			</section>
 
 		<!-- One -->
@@ -58,6 +57,7 @@
                 </div>
                 <p>As underclassmen, it wasn’t that long ago that we were rushing AKPsi. We remember wondering if our attire was professional enough, if we were too enthusiastic or not enthusiastic enough, and the hundred other things that run through your mind. Trust us when we say we know it can be daunting rushing a business fraternity, which is why we are here to help answer all your questions. We are incredibly excited to share our experiences with you and see what new perspectives and personalities you may bring to this amazing brotherhood! Feel free to reach out to us at any point at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>.</p>
                 <p>-Jayden Liu & Hunter Hopkins, Spring ‘18 Rush Chairs
+								</p>
 							</header>
 							<hr />
 							<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DO0YEyPwzuw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
