new photos and titles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="rush.html">Rush</a></li>
-					<li><a href="/rush.html#faq">FAQ</a></li>
+					<li><a href="#execboard" class="scrolly">Our Exec Board</a></li>
+					<li><a href="rush.html#faq">FAQ</a></li>
 					<!-- <li><a href="generic.html">Generic</a></li>
 					<li><a href="elements.html">Elements</a></li> -->
 				</ul>
@@ -75,7 +76,7 @@
 		<!-- Exec Board -->
 			<section id="execboard" class="wrapper style3">
 				<div class="inner">
-					<h2><center>Executive Board</center><br><br></h2>
+					<h2><center>Executive Board</center><br></h2>
 					<div id="flexgrid">
 						<div>
 							<header>
@@ -138,8 +139,8 @@
 						</ul>
 					</header>
 					<br><br>
+					<h2><center>Brother Spotlights!</center><br></h2>
 					<div class="grid-style">
-
 						<div>
 							<div class="box">
 								<div class="image fit">
