--- a/rush.html
+++ b/rush.html
@@ -25,7 +25,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
           <li><a href="index.html">Rush</a></li>
-					<li><a href="#faq">FAQ</a></li>
+					<li><a href="#faq" class="scrolly">FAQ</a></li>
 					<!-- <li><a href="generic.html">Generic</a></li>
 					<li><a href="elements.html">Elements</a></li> -->
 				</ul>
@@ -47,7 +47,7 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Spring Rush 2018</h2>
+								<h2>Our Rush Chairs</h2>
 								<!-- <p>Look below to find out more about our events!</p> -->
                 <div class="image left rush">
                   <img src="images/jaydenLiu.jpg" alt="" />
@@ -55,21 +55,18 @@
                 <div class="image right rush">
                   <img src="images/hunterHopkins.jpg" alt="" />
                 </div>
-                <p>As underclassmen, it wasn’t that long ago that we were rushing AKPsi. We remember wondering if our attire was professional enough, if we were too enthusiastic or not enthusiastic enough, and the hundred other things that run through your mind. Trust us when we say we know it can be daunting rushing a business fraternity, which is why we are here to help answer all your questions. We are incredibly excited to share our experiences with you and see what new perspectives and personalities you may bring to this amazing brotherhood! Feel free to reach out to us at any point at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>.</p>
-                <p>-Jayden Liu & Hunter Hopkins, Spring ‘18 Rush Chairs
-								</p>
+                <p>As underclassmen, it wasn’t that long ago that we were rushing AKPsi. We remember wondering if our attire was professional, if we were too enthusiastic or not enthusiastic enough, and the hundred other things running through our minds. Trust us when we say we know it can be daunting to rush a business fraternity. That is why we are here to help and to answer all your questions. We are incredibly excited to share our experiences with you and see what new perspectives and personalities you may bring to this amazing brotherhood! Feel free to reach out to us at any point at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>.</p>
+                <p>-Jayden Liu & Hunter Hopkins, Spring ‘18 Rush Chairs</p>
 							</header>
 							<hr />
-							<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DO0YEyPwzuw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-							<!-- <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-							<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p> -->
 						</div>
 					</div>
 				</div>
 			</section>
 
-      <!-- Three -->
+      <!-- Rush -->
   			<section id="rush" class="wrapper style2">
+					<h2><center>Spring 2018 Rush Schedule</center><br></h2>
   				<div class="inner">
   					<div class="grid-style">
 
@@ -84,7 +81,7 @@
                       <p>February 7th 5:00PM - 6:00PM @ BLC 4040 <br>Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p>Join Alpha Kappa Psi & the Career Center for a Job/Internship workshop! Learn from brothers who have experience in applying and landing internships and jobs in various fields. This is also a great opportunity to meet the the brothers ahead of Spring Rush!</p>
+										<p>Join Alpha Kappa Psi & the Career Center for a Job/Internship workshop! Learn from brothers who have experience in applying and landing internships in various fields. This is a great opportunity to meet the brothers ahead of Spring Rush.</p>
   								</div>
   							</div>
   						</div>
@@ -113,10 +110,10 @@
   								<div class="content">
   									<header class="align-center">
   										<h2>Meet the Brothers</h2>
-                      <p>7pm - 10pm @ Mudd Atrium</br>Dress Code: Casual</p>
+                      <p>7pm - 9pm @ Mudd Atrium</br>Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p>Get a chance to meet all the amazing brothers of Alpha Kappa Psi! We will be providing pizza and refreshments and would love to get a chance to find out more about you! </p>
+  									<p>Attend Meet the Brothers and get a chance to meet all the amazing brothers of Alpha Kappa Psi! We will be providing pizza and refreshments and are excited to learn more about you!</p>
   								</div>
   							</div>
   						</div>
@@ -129,10 +126,10 @@
   								<div class="content">
   									<header class="align-center">
   										<h2>Information Session I</h2>
-                      <p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
+                      <p>7pm - 9pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
   									</header>
   									<hr />
-  									<p>What is Rush? What are the pledge projects? Do I have to be a certain major to rush? Our information session will give you a chance to ask all the questions you have about the fraternity. You will have time to talk to our project chairs and make meaningful connections!</p>
+  									<p>How does the recruitment process work? What are pledge education projects? What does being a brother of AKPsi entail? Our information sessions will give you a chance to ask any questions you have about the fraternity. You will also be able to talk to our project chairs and make meaningful connections!</p>
   								</div>
   							</div>
   						</div>
@@ -145,7 +142,7 @@
   								<div class="content">
   									<header class="align-center">
   										<h2>Information Session II</h2>
-  										<p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
+  										<p>7pm - 9pm @ Charles Commons Salon B<br> Dress Code: Business Casual</p>
   									</header>
   									<hr />
                     <p>You only need to attend one Information Session! Look at Information Session I for more details.</p>
@@ -161,10 +158,10 @@
   								<div class="content">
   									<header class="align-center">
   										<h2>Social Night</h2>
-                      <p>7pm - 10pm @ Charles Commons Salon B<br> Dress Code: Casual</p>
+                      <p>7pm - 9pm @ Charles Commons Kitchen<br> Dress Code: Casual</p>
   									</header>
   									<hr />
-  									<p>Wear comfortable clothes and tennis shoes! Get ready to have some fun playing team building games with our brothers! </p>
+  									<p>Wear comfortable clothes and tennis shoes! Get ready to have fun playing team building activities and games with our brothers!</p>
   								</div>
   							</div>
   						</div>
@@ -172,7 +169,7 @@
   						<div>
   							<div class="box">
   								<div class="image fit">
-  									<img src="images/rushbanner.jpg" alt="" />
+  									<img src="images/professionalNight.png" alt="" />
   								</div>
   								<div class="content">
   									<header class="align-center">
@@ -203,37 +200,37 @@
 
           <div>
             <header>
-              <h3>Do I have to be an Economics or business related major?</h3>
+              <h3>Is there a major requirement to rush AKPsi?</h3>
             </header>
-            <p>No. It is necessary to know how to interview well and behave with professionalism in the workplace no matter what industry enter. During your pledge process in AKPsi, you will learn skills such as crafting your own resume, presenting yourself in networking settings, preparing for interviews, organization skills, and public speaking.</p>
+            <p>No. It is necessary to know how to interview well and behave with professionalism in the workplace no matter what industry you enter. During the new member process in AKPsi, you will learn skills such as crafting your own resume, presenting yourself in networking settings, preparing for interviews, organization skills, and public speaking.</p>
         </div>
 
         <div>
           <header>
             <h3>What is the pledge process?</h3>
           </header>
-          <p>The pledging process is an 8 week time-period to develop brotherhood through relationships with your pledge class and brothers in the fraternity. During this time you also complete a project in Finance, Consulting, Entrepreneurship, or Marketing.</p>
+          <p>During the pledging process you will complete an academic project in Finance, Consulting, Entrepreneurship, or Marketing. You will also have the opportunity to develop brotherhood through relationships with fellow new members and with brothers of the fraternity. </p>
       </div>
 
       <div>
         <header>
-          <h3>Who do I contact if I cannot make a rush event? If I miss an event will I be cut?</h3>
+          <h3>Who do I contact if I cannot make a rush event?</h3>
         </header>
-        <p>If you cannot make one of the events, please let one of the rush chairs know ahead of time in person and by email at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>. We only have a week to meet all of you, so try your best to attend all events!</p>
+        <p>If you cannot make one of the events, please speak to one of the recruitment chairs in person and by email at <a href="mailto:jhuakpsirush@gmail.com">jhuakpsirush@gmail.com</a>. We only have a week to meet you, so try your best to attend all events!</p>
       </div>
 
       <div>
         <header>
           <h3>What are the Pledge Projects?</h3>
         </header>
-        <p>The Pledge Projects give our new members a unique opporutnity to gain valuable insight into one of the four areas of business: finance, consulting, entrepreneurship, and marketing. The project will teach you necessary professional skills such as time management, public speaking, organizational skills, and communication. </p>
+        <p>The Pledge Projects give our new members a unique opportunity to gain valuable insight in one of the four areas of business: finance, consulting, entrepreneurship, and marketing. Lead by experienced brothers, the projects teach you necessary professional skills such as time management, public speaking, organizational skills, and communication.</p>
 			</div>
 
       <div>
         <header>
           <h3>Where are some of our alumni?</h3>
         </header>
-        <p>Our alumni network at Hopkins is diverse in both location and field. Our brothers have gone to start their own health care companies, enrolled in schools such as Harvard Medical School, Stanford Medicine, Wharton, Harvard Business School, and others have gone to work at places such as Bain & Co, McKinsey & Co, Bridgewater Associates, JP Morgan, Morgan Stanley, Pandora, and Facebook. The list goes on and on!</p>
+        <p>Our alumni network at Hopkins is diverse in both location and field. Our brothers have started their own health care companies, enrolled in graduate schools such as Harvard Medical School and Wharton Business School, and accepted offers at places such as Bain & Co, Bridgewater Associates, JP Morgan, McKinsey & Co, Morgan Stanley, Pandora, and Facebook.</p>
       </div>
 
 
