--- a/rush.html
+++ b/rush.html
@@ -47,7 +47,7 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Our Rush Chairs</h2>
+								<h3>A message from our Rush Chairs</h3>
 								<!-- <p>Look below to find out more about our events!</p> -->
                 <div class="image left rush">
                   <img src="images/jaydenLiu.jpg" alt="" />
@@ -66,8 +66,8 @@
 
       <!-- Rush -->
   			<section id="rush" class="wrapper style2">
-					<h2><center>Spring 2018 Rush Schedule</center><br></h2>
   				<div class="inner">
+						<h2><center>Spring 2018 Rush Schedule</center><br></h2>
   					<div class="grid-style">
 
               <div>
