--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 					<p>Alpha Kappa Psi is recognized as the premier developer of principled business leaders.</p>
 					<!-- TODO look into navy color button -->
 					<a href="#aboutus" class="button front scrolly">About Us</a>
-					<br><br><a href="rush.html" class="button front scrolly">Rush Spring 2018</a>
+					<p></p>
+					<a href="rush.html" class="button front scrolly">Rush Spring 2018</a>
 					<!-- <a href="#execboard" class="button front scrolly">Executive Board</a> -->
 				</div>
 			</section>
@@ -196,14 +197,14 @@
 			</section> -->
 
 		<!-- Footer -->
-			<!--<footer id="footer" class="wrapper">
+			<footer id="footer" class="wrapper">
 				<div class="inner">
 					<section>
 						<div class="box">
 							<div class="content">
 								<h2 class="align-center">Get in Touch</h2>
 								<hr />
-								<form action="#" method="post">
+<!--								<form action="form-to-email.php" method="post">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input name="name" id="name" type="text" placeholder="Name">
@@ -213,14 +214,14 @@
 										<input name="email" id="email" type="email" placeholder="Email">
 									</div>
 									<div class="field">
-										<label for="dept">Department</label>
+										<label for="dept">Year</label>
 										<div class="select-wrapper">
 											<select name="dept" id="dept">
-												<option value="">- Category -</option>
-												<option value="1">Manufacturing</option>
-												<option value="1">Shipping</option>
-												<option value="1">Administration</option>
-												<option value="1">Human Resources</option>
+												<option value="">- Year -</option>
+												<option value="1">Freshman</option>
+												<option value="1">Sophomore</option>
+												<option value="1">Junior</option>
+												<option value="1">Senior</option>
 											</select>
 										</div>
 									</div>
@@ -231,15 +232,26 @@
 									<ul class="actions align-center">
 										<li><input value="Send Message" class="button special" type="submit"></li>
 									</ul>
+								</form> -->
+
+								<form method="post" name="myemailform" action="form-to-email.php">
+
+								Enter Name:	<input type="text" name="name">
+
+								Enter Email Address:	<input type="text" name="email">
+
+								Enter Message:	<textarea name="message"></textarea>
+
+								<input type="submit" value="Send Form">
 								</form>
 							</div>
 						</div>
 					</section>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>. Video <a href="http://coverr.co/">Coverr</a>.
+						&copy; ALPHA KAPPA PSI | RHO PSI 2018. SITE BY BRYAN KI. INSPIRED BY TEMPLATED.
 					</div>
 				</div>
-			</footer>-->
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
