--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
 		<!-- Footer -->
 			<footer id="footer" class="wrapper">
 				<div class="inner">
-					<section>
+					<!-- <section>
 						<div class="box">
 							<div class="content">
 								<h2 class="align-center">Get in Touch</h2>
 								<hr />
-<!--								<form action="form-to-email.php" method="post">
+								<form action="form-to-email.php" method="post">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input name="name" id="name" type="text" placeholder="Name">
@@ -232,7 +232,7 @@
 									<ul class="actions align-center">
 										<li><input value="Send Message" class="button special" type="submit"></li>
 									</ul>
-								</form> -->
+								</form>
 
 								<form method="post" name="myemailform" action="form-to-email.php">
 
@@ -243,10 +243,16 @@
 								Enter Message:	<textarea name="message"></textarea>
 
 								<input type="submit" value="Send Form">
-								</form>
+							</form>
 							</div>
 						</div>
-					</section>
+					</section> -->
+					<div class="align-center">
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/johnshopkinsakpsi/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/akpsi_jhu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
+				</div>
 					<div class="copyright">
 						&copy; ALPHA KAPPA PSI | RHO PSI 2018. SITE BY BRYAN KI. INSPIRED BY TEMPLATED.
 					</div>
