--- a/rush.html
+++ b/rush.html
@@ -238,9 +238,9 @@
 			</section>
 
 		<!-- Footer -->
-			<!-- <footer id="footer" class="wrapper">
+			<footer id="footer" class="wrapper">
 				<div class="inner">
-					<section>
+					<!-- <section>
 						<div class="box">
 							<div class="content">
 								<h2 class="align-center">Get in Touch</h2>
@@ -276,12 +276,19 @@
 								</form>
 							</div>
 						</div>
-					</section>
+					</section> -->
+					<div class="align-center">
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/johnshopkinsakpsi/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/akpsi_jhu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
+				</div>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a> Video <a href="http://coverr.co/">Coverr</a>.
+						&copy; ALPHA KAPPA PSI | RHO PSI 2018. SITE BY BRYAN KI. INSPIRED BY TEMPLATED.
 					</div>
 				</div>
-			</footer> -->
+				</div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
